--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,10 @@
 			"php artisan optimize"
 		],
 		"post-update-cmd": [
-			"php artisan debugbar:publish",
-			"php artisan clear-compiled",
-			"php artisan ide-helper:generate",
-			"php artisan optimize"
+			"php artisan --env=work debugbar:publish",
+			"php artisan --env=work clear-compiled",
+			"php artisan --env=work ide-helper:generate",
+			"php artisan --env=work optimize"
 		],
 		"post-create-project-cmd": [
 			"php artisan key:generate"
